--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 :root{--bg:#eef6ef;--card:#fff;--accent:#4caf50;--muted:#6b7280;--warn:#f87171}
 body{margin:0;font-family:sans-serif;background:var(--bg);display:flex;justify-content:center;padding:20px}
 .wrap{max-width:900px;width:100%}
-header{display:flex;justify-content:flex-end;flex-wrap:wrap;gap:8px;margin-bottom:16px}
+header{display:flex;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-bottom:16px}
+.stats{display:flex;gap:12px;align-items:center}
+.stat{background:var(--card);padding:8px 12px;border-radius:12px;font-weight:600;box-shadow:0 4px 10px rgba(0,0,0,0.05)}
 .garden{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;position:relative}
 .bed{background:linear-gradient(180deg,#f0fff0,#d6ffe0);padding:12px;border-radius:16px;min-height:120px;display:flex;flex-direction:column;align-items:center;justify-content:center;position:relative;border:1px solid rgba(34,197,94,0.2);transition:0.3s;box-shadow:0 4px 8px rgba(0,0,0,0.08);}
 .bed.selected{outline:3px solid rgba(74,222,128,0.4);box-shadow:0 10px 30px rgba(74,222,128,0.15)}
@@ -38,9 +40,15 @@ header{display:flex;justify-content:flex-end;flex-wrap:wrap;gap:8px;margin-botto
 <body>
 <div class="wrap">
 <header>
+<div class="stats">
+<div class="stat">💧 <span id="water">0</span></div>
+<div class="stat">💰 <span id="money">0</span></div>
+</div>
+<div>
 <button id="openShop" class="btn">🛒 Магазин</button>
 <button id="openInventory" class="btn">🎒 Инвентарь</button>
 <button id="openSettings" class="btn">⚙️ Настройки</button>
+</div>
 </header>
 
 <div class="garden" id="garden"></div>
@@ -51,7 +59,6 @@ header{display:flex;justify-content:flex-end;flex-wrap:wrap;gap:8px;margin-botto
 <button id="harvestBtn" class="btn primary">Собрать урожай</button>
 </div>
 
-<!-- Seed selection modal -->
 <div id="seedModal" class="modal">
 <h3>Выберите семя для посадки</h3>
 <div id="seedOptions" class="seed-select"></div>
@@ -70,7 +77,10 @@ header{display:flex;justify-content:flex-end;flex-wrap:wrap;gap:8px;margin-botto
 
 <div id="inventory" class="modal">
 <h3>Инвентарь</h3>
-<div id="inventoryList"></div>
+<h4>Семена</h4>
+<div id="inventorySeeds"></div>
+<h4>Урожай</h4>
+<div id="inventoryHarvest"></div>
 <button id="closeInventory" class="btn" style="margin-top:8px;">Закрыть</button>
 </div>
 
@@ -81,48 +91,33 @@ header{display:flex;justify-content:flex-end;flex-wrap:wrap;gap:8px;margin-botto
 </div>
 
 <div id="toast" class="toast"></div>
-</div>
-
 <script>
 const GARDEN_SIZE=8;
 let garden=[], inventory=[], selectedBed=null;
 let money=parseInt(localStorage.getItem('money'))||20;
 let water=parseInt(localStorage.getItem('water'))||2;
-
-const plantsData = {
-  'Морковь': {growRate:5, price:10, maxHarvest:1, cost:5},
-  'Клубника': {growRate:2, price:5, maxHarvest:10, cost:10}
-};
+const plantsData = {'Морковь': {growRate:5, price:10, maxHarvest:1, cost:5}, 'Клубника': {growRate:2, price:5, maxHarvest:10, cost:10}};
 
 const gardenEl=document.getElementById('garden');
 const toastEl=document.getElementById('toast');
-const inventoryListEl=document.getElementById('inventoryList');
+const inventorySeedsEl=document.getElementById('inventorySeeds');
+const inventoryHarvestEl=document.getElementById('inventoryHarvest');
+const waterEl=document.getElementById('water');
 const seedModal=document.getElementById('seedModal');
 const seedOptions=document.getElementById('seedOptions');
 
-function showToast(msg){
-  toastEl.textContent=msg;
-  toastEl.classList.add('show');
-  setTimeout(()=>{toastEl.classList.remove('show');},2000);
-}
-
-function saveProgress(){
-  localStorage.setItem('money',money);
-  localStorage.setItem('water',water);
-  localStorage.setItem('garden',JSON.stringify(garden.map(b=>b.plant)));
-  localStorage.setItem('inventory',JSON.stringify(inventory));
-}
+function showToast(msg){toastEl.textContent=msg;toastEl.classList.add('show');setTimeout(()=>{toastEl.classList.remove('show');},2000);}
+function saveProgress(){localStorage.setItem('money',money);localStorage.setItem('water',water);localStorage.setItem('garden',JSON.stringify(garden.map(b=>b.plant)));localStorage.setItem('inventory',JSON.stringify(inventory));}
 
 function updateUI(){
+  waterEl.textContent=water;
   garden.forEach((b,i)=>{
     const el=document.getElementById('bed-'+i);
     el.classList.toggle('selected',selectedBed===i);
     const plantEl=el.querySelector('.plant');
     const soilEl=el.querySelector('.soil');
-    if(!b.plant){
-      if(plantEl) plantEl.remove();
-      soilEl.textContent='Пусто';
-    } else {
+    if(!b.plant){if(plantEl) plantEl.remove();soilEl.textContent='Пусто';} 
+    else {
       soilEl.textContent='';
       if(!plantEl){
         const div=document.createElement('div');
@@ -146,29 +141,19 @@ function updateUI(){
 }
 
 function renderInventory(){
-  const counts={};
-  inventory.forEach(item=>counts[item.type]=counts[item.type]?counts[item.type]+1:1);
-  let html='';
-  for(const key in counts){
-    html+=`${key} x ${counts[key]}<br>`;
-  }
-  inventoryListEl.innerHTML=html||'Пусто';
+  const seedsCount={}, harvestCount={};
+  inventory.forEach(item=>{if(item.harvested) harvestCount[item.type]=harvestCount[item.type]?harvestCount[item.type]+1:1; else seedsCount[item.type]=seedsCount[item.type]?seedsCount[item.type]+1:1;});
+  inventorySeedsEl.innerHTML='';for(const key in seedsCount) inventorySeedsEl.innerHTML+=`${key} x ${seedsCount[key]}<br>`;
+  inventoryHarvestEl.innerHTML='';for(const key in harvestCount) inventoryHarvestEl.innerHTML+=`${key} x ${harvestCount[key]}<br>`;
 }
 
 function createBeds(){
-  garden=[];
-  const savedGarden=JSON.parse(localStorage.getItem('garden')||'[]');
-  const savedInventory=JSON.parse(localStorage.getItem('inventory')||'[]');
-  inventory=[];
-  savedInventory.forEach(i=>inventory.push(i));
-
+  garden=[]; const savedGarden=JSON.parse(localStorage.getItem('garden')||'[]'); const savedInventory=JSON.parse(localStorage.getItem('inventory')||'[]'); inventory=[]; savedInventory.forEach(i=>inventory.push(i));
   for(let i=0;i<GARDEN_SIZE;i++){
     const bed={plant:savedGarden[i]||null};
     garden.push(bed);
     const div=document.createElement('div');
-    div.className='bed';
-    div.id='bed-'+i;
-    div.innerHTML='<div class="soil">Пусто</div>';
+    div.className='bed'; div.id='bed-'+i; div.innerHTML='<div class="soil">Пусто</div>';
     div.addEventListener('click',()=>{selectedBed=i;updateUI();});
     gardenEl.appendChild(div);
   }
@@ -176,18 +161,14 @@ function createBeds(){
 
 function plantSeed(){
   if(selectedBed===null){showToast('Выберите грядку');return;}
-  const b=garden[selectedBed];
-  if(b.plant){showToast('Грядка занята');return;}
-  const seedTypes = [...new Set(inventory.map(i=>i.type))];
-  if(seedTypes.length===0){showToast('Нет семян');return;}
-  if(seedTypes.length===1){
-    plantChosen(seedTypes[0]);
-  } else {
-    seedOptions.innerHTML='';
-    seedTypes.forEach(type=>{
-      const btn=document.createElement('div');
-      btn.className='seed-option';
-      btn.textContent=type;
+  const b=garden[selectedBed]; if(b.plant){showToast('Грядка занята');return;}
+  const seedTypes = inventory.filter(i=>!i.harvested).map(i=>i.type);
+  const uniqueTypes=[...new Set(seedTypes)];
+  if(uniqueTypes.length===0){showToast('Нет семян');return;}
+  if(uniqueTypes.length===1) plantChosen(uniqueTypes[0]);
+  else {
+    seedOptions.innerHTML=''; uniqueTypes.forEach(type=>{
+      const btn=document.createElement('div'); btn.className='seed-option'; btn.textContent=type;
       btn.addEventListener('click',()=>plantChosen(type));
       seedOptions.appendChild(btn);
     });
@@ -196,10 +177,11 @@ function plantSeed(){
 }
 
 function plantChosen(type){
-  const idx=inventory.findIndex(i=>i.type===type);
+  const idx=inventory.findIndex(i=>i.type===type && !i.harvested);
   if(idx!==-1){
     inventory.splice(idx,1);
-    garden[selectedBed].plant={type,type:type,maxHarvest:plantsData[type].maxHarvest,harvested:0,progress:0};
+    const data=plantsData[type];
+    garden[selectedBed].plant={type:type,maxHarvest:data.maxHarvest,progress:0,harvestedCount:0};
     updateUI();
     seedModal.classList.remove('open');
   }
@@ -210,125 +192,63 @@ function waterBed(){
   const b=garden[selectedBed];
   if(!b.plant){showToast('Нет растения');return;}
   if(water<=0){showToast('Воды нет');return;}
-  water--;
-  b.plant.progress=Math.min(100,(b.plant.progress||0)+20);
-  createWaterDrops(document.getElementById('bed-'+selectedBed));
-  updateUI();
+  water--; b.plant.progress=Math.min(100,(b.plant.progress||0)+20);
+  createWaterDrops(document.getElementById('bed-'+selectedBed)); updateUI();
 }
 
 function createWaterDrops(bedEl){
   if(!bedEl) return;
   for(let i=0;i<5;i++){
-    const drop=document.createElement('div');
-    drop.className='water-drop';
+    const drop=document.createElement('div'); drop.className='water-drop';
     drop.style.left=(10+Math.random()*60)+'px';
     drop.style.animationDelay=(i*0.1)+'s';
-    bedEl.appendChild(drop);
-    setTimeout(()=>{drop.remove();},600);
+    bedEl.appendChild(drop); setTimeout(()=>{drop.remove();},600);
   }
 }
 
 function harvestSelected(){
   if(selectedBed===null){showToast('Выберите грядку');return;}
-  const b=garden[selectedBed];
-  if(!b.plant){showToast('Грядка пуста');return;}
-  if(b.plant.harvested< b.plant.maxHarvest){
-    inventory.push({type:b.plant.type});
-    b.plant.harvested++;
-    if(b.plant.harvested>=b.plant.maxHarvest) b.plant=null;
-    updateUI();
-  } else {
-    b.plant=null;
+  const b=garden[selectedBed]; if(!b.plant){showToast('Грядка пуста');return;}
+  if(b.plant.harvestedCount===undefined) b.plant.harvestedCount=0;
+  if(b.plant.harvestedCount < b.plant.maxHarvest){
+    inventory.push({type:b.plant.type, harvested:true});
+    b.plant.harvestedCount++;
+    if(b.plant.type === 'Клубника' && b.plant.harvestedCount < b.plant.maxHarvest){b.plant.progress=0;}
+    else if(b.plant.harvestedCount >= b.plant.maxHarvest){b.plant=null;}
     updateUI();
   }
 }
 
 // Авто-рост
-setInterval(()=>{
-  garden.forEach(b=>{
-    if(b.plant && b.plant.progress<100){
-      b.plant.progress=Math.min(100,(b.plant.progress||0)+plantsData[b.plant.type].growRate);
-    }
-  });
-  updateUI();
-},1000);
+setInterval(()=>{garden.forEach(b=>{if(b.plant && b.plant.progress<100){b.plant.progress=Math.min(100,(b.plant.progress||0)+plantsData[b.plant.type].growRate);
+const el=document.getElementById('bed-'+garden.indexOf(b));
+if(el){const leaves=el.querySelector('.leaves'); if(leaves) leaves.style.transform=`translateY(${-(b.plant.progress/5)}px) rotate(${Math.sin(Date.now()/500)*10}deg)`; const scale=0.5+0.5*(b.plant.progress/100); el.querySelector('.plant .emoji').style.transform=`scale(${scale})`;}}}); updateUI();},1000);
 
-createBeds();
-updateUI();
+// Магазин и продажи
+const shop=document.getElementById('shop'); const shopContent=document.getElementById('shopContent'); const tabShop=document.getElementById('tabShop'); const tabSell=document.getElementById('tabSell');
 
-// Buttons
-document.getElementById('plantBtn').addEventListener('click',plantSeed);
-document.getElementById('waterBtn').addEventListener('click',()=>{waterBed();});
-document.getElementById('harvestBtn').addEventListener('click',harvestSelected);
+function renderShop(){shopContent.innerHTML=''; for(const key in plantsData){const btn=document.createElement('button'); btn.className='btn'; btn.textContent=`Купить 1 ${key} (${plantsData[key].cost}💰)`; btn.addEventListener('click',()=>{if(money<plantsData[key].cost){showToast('Нет денег');return;} money-=plantsData[key].cost; inventory.push({type:key}); updateUI();}); const div=document.createElement('div'); div.className='shop-row'; div.textContent=key; div.appendChild(btn); shopContent.appendChild(div);}
+const waterBtn=document.createElement('button'); waterBtn.className='btn'; waterBtn.textContent='Купить воду (2💰)'; waterBtn.addEventListener('click',()=>{if(money<2){showToast('Нет денег');return;} money-=2; water+=1; updateUI();}); const waterDiv=document.createElement('div'); waterDiv.className='shop-row'; waterDiv.textContent='Вода 💧'; waterDiv.appendChild(waterBtn); shopContent.appendChild(waterDiv);}
 
-// Seed modal
-document.getElementById('closeSeedModal').addEventListener('click',()=>{seedModal.classList.remove('open');});
+function renderSell(){shopContent.innerHTML=''; const types=[...new Set(inventory.filter(i=>i.harvested).map(i=>i.type))]; types.forEach(type=>{const div=document.createElement('div'); div.className='shop-row'; div.textContent=type; const sellOne=document.createElement('button'); sellOne.className='btn'; sellOne.textContent='Продать 1'; sellOne.addEventListener('click',()=>{const idx=inventory.findIndex(i=>i.type===type && i.harvested); if(idx!==-1){inventory.splice(idx,1); money+=plantsData[type].price;updateUI();}else showToast('Нет в инвентаре');}); const sellAll=document.createElement('button'); sellAll.className='btn'; sellAll.textContent='Продать всё'; sellAll.addEventListener('click',()=>{const all=inventory.filter(i=>i.type===type && i.harvested); inventory=inventory.filter(i=>!(i.type===type && i.harvested)); money+=plantsData[type].price*all.length; updateUI();}); div.appendChild(sellOne); div.appendChild(sellAll); shopContent.appendChild(div);});}
 
-// Shop
-const shop=document.getElementById('shop');
-const shopContent=document.getElementById('shopContent');
-const tabShop=document.getElementById('tabShop');
-const tabSell=document.getElementById('tabSell');
-
-function renderShop(){
-  shopContent.innerHTML='';
-  for(const key in plantsData){
-    const btn=document.createElement('button');
-    btn.className='btn';
-    btn.textContent=`Купить 1 ${key} (${plantsData[key].cost}💰)`;
-    btn.addEventListener('click',()=>{
-      if(money<plantsData[key].cost){showToast('Нет денег');return;}
-      money-=plantsData[key].cost;
-      inventory.push({type:key});
-      updateUI();
-    });
-    const div=document.createElement('div');
-    div.className='shop-row';
-    div.textContent=key;
-    div.appendChild(btn);
-    shopContent.appendChild(div);
-  }
-}
-
-function renderSell(){
-  shopContent.innerHTML='';
-  const types=[...new Set(inventory.map(i=>i.type))];
-  types.forEach(type=>{
-    const btn=document.createElement('button');
-    btn.className='btn';
-    btn.textContent='Продать 1';
-    btn.addEventListener('click',()=>{
-      const idx=inventory.findIndex(i=>i.type===type);
-      if(idx!==-1){
-        inventory.splice(idx,1);
-        money+=plantsData[type].price;
-        updateUI();
-      } else showToast('Нет в инвентаре');
-    });
-    const div=document.createElement('div');
-    div.className='shop-row';
-    div.textContent=type;
-    div.appendChild(btn);
-    shopContent.appendChild(div);
-  });
-}
-
-renderShop();
-tabShop.addEventListener('click',renderShop);
-tabSell.addEventListener('click',renderSell);
+renderShop(); tabShop.addEventListener('click',renderShop); tabSell.addEventListener('click',renderSell);
 document.getElementById('openShop').addEventListener('click',()=>{shop.classList.add('open');});
 document.getElementById('closeShop').addEventListener('click',()=>{shop.classList.remove('open');});
 
-// Inventory
-const inventoryModal=document.getElementById('inventory');
-document.getElementById('openInventory').addEventListener('click',()=>{inventoryModal.classList.add('open');});
-document.getElementById('closeInventory').addEventListener('click',()=>{inventoryModal.classList.remove('open');});
-
-// Settings
-const settings=document.getElementById('settings');
-document.getElementById('openSettings').addEventListener('click',()=>{settings.classList.add('open');});
-document.getElementById('closeSettings').addEventListener('click',()=>{settings.classList.remove('open');});
+// Кнопки
+document.getElementById('plantBtn').addEventListener('click',plantSeed);
+document.getElementById('waterBtn').addEventListener('click',waterBed);
+document.getElementById('harvestBtn').addEventListener('click',harvestSelected);
+document.getElementById('closeSeedModal').addEventListener('click',()=>{seedModal.classList.remove('open');});
+document.getElementById('openInventory').addEventListener('click',()=>{document.getElementById('inventory').classList.add('open');});
+document.getElementById('closeInventory').addEventListener('click',()=>{document.getElementById('inventory').classList.remove('open');});
+document.getElementById('openSettings').addEventListener('click',()=>{document.getElementById('settings').classList.add('open');});
+document.getElementById('closeSettings').addEventListener('click',()=>{document.getElementById('settings').classList.remove('open');});
 document.getElementById('resetBtn').addEventListener('click',()=>{if(confirm('Вы точно хотите сбросить прогресс?')){localStorage.clear();location.reload();}});
+
+createBeds();
+updateUI();
 </script>
 </body>
 </html>
